--- a/views/bachas.ejs
+++ b/views/bachas.ejs
@@ -1,15 +1,13 @@
-<!doctype html>
-<html class="no-js" lang="zxx">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WASSER AR</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
-
-	<!-- CSS here -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/stylesheets/css/registro.css">
+    <title>Carga de producto</title>
+    <link rel="icon" type="image/jpg" href="img/waseer.jfif">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;1,200&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="stylesheets/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="stylesheets/css/slicknav.css">
@@ -25,6 +23,7 @@
 	<link rel="stylesheet" href="stylesheets/css/nice-select.css">
 	<link rel="stylesheet" href="stylesheets/css/style.css">
 </head>
+<body>
 <body>
     <!-- ? Preloader Start -->
     <div id="preloader-active">
@@ -98,8 +97,8 @@
                                                         <ul class="submenu">
                                                             
                                                             <li><a href="/producto">item 1</a></li>
-                                                            <li><a href="">item 2</a></li>
-                                                            <li><a href="">item 3</a></li>
+                                                            <li><a href="/producto">item 2</a></li>
+                                                            <li><a href="/producto">item 3</a></li>
                                                             <li><a href="/carrito">IR AL CARRITO</a></li>
                                                         </ul>
                                                     </li>
@@ -317,57 +316,94 @@
     <!-- JS here -->
 
     <footer>
-      <p>Copyright ©2020 <a href="">WASSER</a> | Made by <a href="https://www.instagram.com/sibeeriano/">Facundo Vara</a> - <a href="https://www.instagram.com/leandrobuco/">Leandro Bucco</a> - <a href="https://www.instagram.com/leandrouriell/">Uriel Turrion</a> | <a href="">Termino y condiciones</a> </p>
-  </div>
-</footer>
+      <div class="container">    
+          <div class="row">
+            <div class="col-sm-12">
+              
+              <div class="footer">
+                  <br>
+                  <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
+                  <br>
   
-<!-- search model begin -->
-<div class="search-model-box" style="display: none;">
-<div class="h-100 d-flex align-items-center justify-content-center">
-<div class="search-close-btn">+</div>
-<form class="search-model-form">
-<input type="text" id="search-input" placeholder="Qué buscas?">
-</form>
-</div>
-</div>              
-<!-- Search model end -->   
-<!-- Scroll Up -->
-<div id="back-top" >
-<a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
-</div>
+              
+                  
+              </div>
+  
+              <div class="footer">
+                  <h4>Saber mas</h4>
+                  <ul class="footer_list">
+                    <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
+                    <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
+                    <li><a href="/">FAQ</a></li>
+                    <li><a href="/">Nuestras Oficinas</a></li>
+  
+                  </ul>
+                 
+                </div> 
+                <br>
+                <h2>Subscribite para recibir las mejores ofertas!</h2>
+                <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
+                <br>
+                <br>
+  
+                
+  
+  
+            </div>
+            <br>
+          </div>
+        </div>
+  </footer>
+                              
+                       
+                          
+  <!-- search model begin -->
+  <div class="search-model-box" style="display: none;">
+      <div class="h-100 d-flex align-items-center justify-content-center">
+          <div class="search-close-btn">+</div>
+          <form class="search-model-form">
+              <input type="text" id="search-input" placeholder="Qué buscas?">
+          </form>
+      </div>
+  </div>              
+   <!-- Search model end -->   
+  <!-- Scroll Up -->
+  <div id="back-top" >
+      <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
+  </div>
 
-<!-- JS here -->
+  <!-- JS here -->
 
-<script src="stylesheets/js/vendor/modernizr-3.5.0.min.js"></script>
-<!-- Jquery, Popper, Bootstrap -->
-<script src="stylesheets/js/vendor/jquery-1.12.4.min.js"></script>
-<script src="stylesheets/js/popper.min.js"></script>
-<script src="stylesheets/js/bootstrap.min.js"></script>
-<!-- Jquery Mobile Menu -->
-<script src="stylesheets/js/jquery.slicknav.min.js"></script>
+  <script src="stylesheets/js/vendor/modernizr-3.5.0.min.js"></script>
+  <!-- Jquery, Popper, Bootstrap -->
+  <script src="stylesheets/js/vendor/jquery-1.12.4.min.js"></script>
+  <script src="stylesheets/js/popper.min.js"></script>
+  <script src="stylesheets/js/bootstrap.min.js"></script>
+  <!-- Jquery Mobile Menu -->
+  <script src="stylesheets/js/jquery.slicknav.min.js"></script>
 
-<!-- Jquery Slick , Owl-Carousel Plugins -->
-<script src="stylesheets/js/owl.carousel.min.js"></script>
-<script src="stylesheets/js/slick.min.js"></script>
-<!-- One Page, Animated-HeadLin -->
-<script src="stylesheets/js/wow.min.js"></script>
-<script src="stylesheets/js/animated.headline.js"></script>
-<script src="stylesheets/js/jquery.magnific-popup.js"></script>
+  <!-- Jquery Slick , Owl-Carousel Plugins -->
+  <script src="stylesheets/js/owl.carousel.min.js"></script>
+  <script src="stylesheets/js/slick.min.js"></script>
+  <!-- One Page, Animated-HeadLin -->
+  <script src="stylesheets/js/wow.min.js"></script>
+  <script src="stylesheets/js/animated.headline.js"></script>
+  <script src="stylesheets/js/jquery.magnific-popup.js"></script>
 
-
-
-<!-- counter , waypoint,Hover Direction -->
-<script src="stylesheets/js/jquery.counterup.min.js"></script>
-<script src="stylesheets/js/waypoints.min.js"></script>
-<script src="stylesheets/js/jquery.countdown.min.js"></script>
-<script src="stylesheets/js/hover-direction-snake.min.js"></script>
-
-
-
-<!-- Jquery Plugins, main Jquery -->	
-<script src="stylesheets/js/plugins.js"></script>
-<script src="stylesheets/js/main.js"></script>
+  
+  
+  <!-- counter , waypoint,Hover Direction -->
+  <script src="stylesheets/js/jquery.counterup.min.js"></script>
+  <script src="stylesheets/js/waypoints.min.js"></script>
+  <script src="stylesheets/js/jquery.countdown.min.js"></script>
+  <script src="stylesheets/js/hover-direction-snake.min.js"></script>
 
 
-</body>
+  
+  <!-- Jquery Plugins, main Jquery -->	
+  <script src="stylesheets/js/plugins.js"></script>
+  <script src="stylesheets/js/main.js"></script>
+
+  
+  </body>
 </html>
