--- a/views/carga.ejs
+++ b/views/carga.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/stylesheets/css/registro.css">
-    <title>Registrate en Wasser</title>
+    <title>Carga de producto</title>
     <link rel="icon" type="image/jpg" href="img/waseer.jfif">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;1,200&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
@@ -79,12 +79,12 @@
                                                
                                                 <li><a href="/categoria">Categorias</a>
                                                     <ul class="submenu">
-                                                        <li><a href="">Griferia Baño</a></li>
-                                                        <li><a href="">Griferia Cocina</a></li>
-                                                        <li><a href="">Bachas</a></li>
-                                                        <li><a href="">Sanitarios</a></li>
-                                                        <li><a href="">Bañeras y Duchas</a></li>
-                                                        <li><a href="">Accesorios varios</a></li>
+                                                        <li><a href="/catebanio">Griferia Baño</a></li>
+                                                        <li><a href="/catecocina">Griferia Cocina</a></li>
+                                                        <li><a href="/bachas">Bachas</a></li>
+                                                        <li><a href="/sanitarios">Sanitarios</a></li>
+                                                        <li><a href="/banieras">Bañeras y Duchas</a></li>
+                                                        <li><a href="/accesorios">Accesorios varios</a></li>
                                                         <li><a href="/categoria">ver todas</a></li>
                                                     </ul>
                                                 </li>
@@ -95,8 +95,8 @@
                                                         <ul class="submenu">
                                                             
                                                             <li><a href="/producto">item 1</a></li>
-                                                            <li><a href="#">item 2</a></li>
-                                                            <li><a href="#">item 3</a></li>
+                                                            <li><a href="/producto">item 2</a></li>
+                                                            <li><a href="/producto">item 3</a></li>
                                                             <li><a href="/carrito">IR AL CARRITO</a></li>
                                                         </ul>
                                                     </li>
@@ -187,7 +187,47 @@
         
     </section>
 
+    <footer>
+        <div class="container">    
+            <div class="row">
+              <div class="col-sm-12">
+                
+                <div class="footer">
+                    <br>
+                    <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
+                    <br>
     
+                
+                    
+                </div>
+    
+                <div class="footer">
+                    <h4>Saber mas</h4>
+                    <ul class="footer_list">
+                      <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
+                      <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
+                      <li><a href="/">FAQ</a></li>
+                      <li><a href="/">Nuestras Oficinas</a></li>
+    
+                    </ul>
+                   
+                  </div> 
+                  <br>
+                  <h2>Subscribite para recibir las mejores ofertas!</h2>
+                  <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
+                  <br>
+                  <br>
+    
+                  
+    
+    
+              </div>
+              <br>
+            </div>
+            <br>
+          </div>
+
+        </footer>
     
 
 
