--- a/views/carrito.ejs
+++ b/views/carrito.ejs
@@ -90,9 +90,9 @@
                                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
                                                         <ul class="submenu">
                                                             
-                                                            <li><a href="/producto">item 1</a></li>
-                                                            <li><a href="#">item 2</a></li>
-                                                            <li><a href="#">item 3</a></li>
+                                                          <li><a href="/producto">item 1</a></li>
+                                                          <li><a href="/producto">item 2</a></li>
+                                                          <li><a href="/producto">item 3</a></li>
                                                             <li><a href="/carrito">IR AL CARRITO</a></li>
                                                         </ul>
                                                     </li>
@@ -137,7 +137,7 @@
 <body class="bg-light">
   <div class="container">
 <div class="py-5 text-center">
-  <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+  
  
   <p class="lead">A continuación se muestra un formulario de pago.
     Por favor complete y verifique que los datos sean correctos ANTES de Seleccionar la opcion de "Finalizar Compra"</p>
@@ -187,7 +187,9 @@
     <form class="card p-2">
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Codigo Promocional">
+        
         <div class="input-group-append">
+          
           <button type="submit" class="btn btn-secondary">ENVIAR</button>
         </div>
       </div>
@@ -349,9 +351,44 @@
   </div>
 </div>
 <footer>
-                                <p>Copyright ©2020 <a href="">WASSER</a> | Made by <a href="https://www.instagram.com/sibeeriano/">Facundo Vara</a> - <a href="https://www.instagram.com/leandrobuco/">Leandro Bucco</a> - <a href="https://www.instagram.com/leandrouriell/">Uriel Turrion</a> | <a href="">Termino y condiciones</a> </p>
-                            </div>
-                          </footer>
+  <div class="container">    
+      <div class="row">
+        <div class="col-sm-12">
+          
+          <div class="footer">
+              <br>
+              <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
+              <br>
+
+          
+              
+          </div>
+
+          <div class="footer">
+              <h4>Saber mas</h4>
+              <ul class="footer_list">
+                <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
+                <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
+                <li><a href="/">FAQ</a></li>
+                <li><a href="/">Nuestras Oficinas</a></li>
+
+              </ul>
+             
+            </div> 
+            <br>
+            <h2>Subscribite para recibir las mejores ofertas!</h2>
+            <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
+            <br>
+            <br>
+
+            
+
+
+        </div>
+        <br>
+      </div>
+    </div>
+</footer>
                             
     <!-- search model begin -->
     <div class="search-model-box" style="display: none;">
