--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="es">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8">   
     <title>WASSER AR</title>
-    <meta name="description" content="">
+    <meta name="wasser" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
 
 	<!-- CSS here -->
 	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
@@ -96,8 +93,8 @@
                                                         <ul class="submenu">
                                                             
                                                             <li><a href="/producto">item 1</a></li>
-                                                            <li><a href="#">item 2</a></li>
-                                                            <li><a href="#">item 3</a></li>
+                                                            <li><a href="/producto">item 2</a></li>
+                                                            <li><a href="/producto">item 3</a></li>
                                                             <li><a href="/carrito">IR AL CARRITO</a></li>
                                                         </ul>
                                                     </li>
@@ -147,9 +144,11 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
+                                
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>compra!</span></h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s">Encontra lo que buscas entre miles de productos nuevos y usados!</p>
+                                    
                                     <a href="/registro" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Registrate!</a>
 
                                    
@@ -222,9 +221,48 @@
         </div>
         <!-- Gallery Area End -->
         </main>
-<footer>
+
+    <footer>
+        <div class="container">    
+            <div class="row">
+              <div class="col-sm-12">
+                
+                <div class="footer">
+                    <br>
+                    <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
+                    <br>
+    
+                
+                    
+                </div>
+    
+                <div class="footer">
+                    <h4>Saber mas</h4>
+                    <ul class="footer_list">
+                      <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
+                      <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
+                      <li><a href="/">FAQ</a></li>
+                      <li><a href="/">Nuestras Oficinas</a></li>
+    
+                    </ul>
+                   
+                  </div> 
+                  <br>
+                  <h2>Subscribite para recibir las mejores ofertas!</h2>
+                  <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
+                  <br>
+                  <br>
+    
+                  
+    
+    
+              </div>
+              <br>
+            </div>
+          </div>
+    </footer>
                                 
-                          </footer>
+                         
                             
     <!-- search model begin -->
     <div class="search-model-box" style="display: none;">
