--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -99,9 +99,9 @@
                                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
                                                       <ul class="submenu">
                                                           
-                                                          <li><a href="/producto">item 1</a></li>
-                                                          <li><a href="#">item 2</a></li>
-                                                          <li><a href="#">item 3</a></li>
+                                                        <li><a href="/producto">item 1</a></li>
+                                                        <li><a href="/producto">item 2</a></li>
+                                                        <li><a href="/producto">item 3</a></li>
                                                           <li><a href="/carrito">IR AL CARRITO</a></li>
                                                       </ul>
                                                   </li>
@@ -281,9 +281,44 @@
     
       <!-- Footer -->
       <footer>
-        <p>Copyright ©2020 <a href="/index">WASSER</a> | Made by <a href="https://www.instagram.com/sibeeriano/">Facundo Vara</a> - <a href="https://www.instagram.com/leandrobuco/">Leandro Bucco</a> - <a href="https://www.instagram.com/leandrouriell/">Uriel Turrion</a> | <a href="">Termino y condiciones</a> </p>
-    </div>
-  </footer>
+        <div class="container">    
+            <div class="row">
+              <div class="col-sm-12">
+                
+                <div class="footer">
+                    <br>
+                    <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
+                    <br>
+    
+                
+                    
+                </div>
+    
+                <div class="footer">
+                    <h4>Saber mas</h4>
+                    <ul class="footer_list">
+                      <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
+                      <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
+                      <li><a href="/">FAQ</a></li>
+                      <li><a href="/">Nuestras Oficinas</a></li>
+    
+                    </ul>
+                   
+                  </div> 
+                  <br>
+                  <h2>Subscribite para recibir las mejores ofertas!</h2>
+                  <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
+                  <br>
+                  <br>
+    
+                  
+    
+    
+              </div>
+              <br>
+            </div>
+          </div>
+    </footer>
     
 <!-- search model begin -->
 <div class="search-model-box" style="display: none;">
