--- a/views/sobrenosotros.ejs
+++ b/views/sobrenosotros.ejs
@@ -96,8 +96,8 @@
                                                         <ul class="submenu">
                                                             
                                                             <li><a href="/producto">item 1</a></li>
-                                                            <li><a href="#">item 2</a></li>
-                                                            <li><a href="#">item 3</a></li>
+                                                            <li><a href="/producto">item 2</a></li>
+                                                            <li><a href="/producto">item 3</a></li>
                                                             <li><a href="/carrito">IR AL CARRITO</a></li>
                                                         </ul>
                                                     </li>
@@ -207,7 +207,45 @@
     <div id="back-top" >
         <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
     </div>
-
+    <footer>
+        <div class="container">    
+            <div class="row">
+              <div class="col-sm-12">
+                
+                <div class="footer">
+                    <br>
+                    <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
+                    <br>
+    
+                
+                    
+                </div>
+    
+                <div class="footer">
+                    <h4>Saber mas</h4>
+                    <ul class="footer_list">
+                      <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
+                      <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
+                      <li><a href="/">FAQ</a></li>
+                      <li><a href="/">Nuestras Oficinas</a></li>
+    
+                    </ul>
+                   
+                  </div> 
+                  <br>
+                  <h2>Subscribite para recibir las mejores ofertas!</h2>
+                  <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
+                  <br>
+                  <br>
+    
+                  
+    
+    
+              </div>
+              <br>
+            </div>
+          </div>
+    </footer>
     <!-- JS here -->
 
     <script src="stylesheets/js/vendor/modernizr-3.5.0.min.js"></script>
